--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -1,4 +1,5 @@
-name: 'Warden Admin'
+name: 'Guardian Admin'
+
 on:
   workflow_call:
     inputs:
@@ -7,7 +8,7 @@ on:
         required: true
         type: string
       workspace:
-        description: 'WORKSPACE - The Terraform workspace directory to execute the command in. If left blank, the command will run for all paths in .warden'
+        description: 'WORKSPACE - The Terraform workspace directory to execute the command in. If left blank, the command will run for all paths in .guardian'
         type: string
       number:
         description: 'PR NUMBER - The Pull Request number to run the actions for (if blank, this runs for main).'
@@ -30,10 +31,10 @@ on:
         required: false
         default: 60
         type: number
-      warden_bucket_name:
+      guardian_bucket_name:
         required: true
         type: string
-      warden_tf_version:
+      guardian_tf_version:
         required: false
         default: '1.1.8'
         type: string
@@ -47,16 +48,22 @@ env:
   MAX_RETRY_DELAY: ${{ inputs.max_retry_delay }}
   WIF_PROVIDER: ${{ inputs.wif_provider }}
   WIF_SERVICE_ACCOUNT: ${{ inputs.wif_service_account }}
-  WARDEN_BUCKET_NAME: ${{ inputs.warden_bucket_name }}
-  WARDEN_TF_VERSION: ${{ inputs.warden_tf_version }}
-  WARDEN_LOCK_FILENAME: 'warden-locks/${{ github.repository }}/${{ github.repository_id }}.tflock'
+  GUARDIAN_BUCKET_NAME: ${{ inputs.guardian_bucket_name }}
+  GUARDIAN_TF_VERSION: ${{ inputs.guardian_tf_version }}
+  GUARDIAN_LOCK_FILENAME: 'guardian-locks/${{ github.repository }}/${{ github.repository_id }}.tflock'
+
 jobs:
   admin_access:
-    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: 'ubuntu-latest'
     permissions:
       contents: 'read'
     steps:
+      - name: 'Validate Branch'
+        if: ${{ github.ref != 'refs/heads/main' }}
+        run: |-
+          echo "::error ::Guardian Admin can only be run from the main branch."
+          exit 1
+
       - name: 'Permission'
         env:
           GH_TOKEN: ${{ github.token }}
@@ -66,9 +73,10 @@ jobs:
             echo "::error ::Actor @${{ github.triggering_actor }} does not have admin permission to perform these operations."
             exit 1
           fi
+
   admin_init:
+    needs: ['admin_access']
     if: ${{ github.ref == 'refs/heads/main' }}
-    needs: 'admin_access'
     runs-on: 'ubuntu-latest'
     permissions:
       contents: 'read'
@@ -78,24 +86,27 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
+
       - name: 'Checkout PR'
         if: ${{ inputs.number != '' }}
         env:
           GH_TOKEN: ${{ github.token }}
         run: gh pr checkout ${{ inputs.number }}
-      - id: 'set-matrix'
-        name: 'Set Matrix'
+
+      - name: 'Set Matrix'
+        id: 'set-matrix'
         run: |-
           if [ "${{ inputs.workspace }}" != "" ]; then
             PATHS=$(echo "${{ inputs.workspace }}" | jq --raw-input 'split(",")' | jq -r tostring)
             echo "paths=${PATHS}" >> $GITHUB_OUTPUT
           else
-            PATHS=$(touch .warden | cat .warden | jq --raw-input . | jq --slurp . -c | jq -r tostring)
+            PATHS=$(touch .guardian | cat .guardian | jq --raw-input . | jq --slurp . -c | jq -r tostring)
             echo "paths=${PATHS}" >> $GITHUB_OUTPUT
           fi
+
   admin:
-    if: ${{ github.ref == 'refs/heads/main' }}
     needs: ['admin_access', 'admin_init']
+    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: 'ubuntu-latest'
     permissions:
       contents: 'read'
@@ -106,45 +117,37 @@ jobs:
       matrix:
         path: ${{ fromJSON(needs.admin_init.outputs.paths) }}
     env:
-      WARDEN_PATH: '${{ matrix.path }}'
+      GUARDIAN_PATH: '${{ matrix.path }}'
       GITHUB_TOKEN: ${{ secrets.gh_token || github.token }}
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
+
       - name: 'Checkout PR'
         if: ${{ inputs.number != '' }}
         env:
           GH_TOKEN: ${{ github.token }}
         run: gh pr checkout ${{ inputs.number }}
-      - id: 'auth'
-        name: 'Authenticate to Google Cloud'
+
+      - name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@ef5d53e30bbcd8d0836f4288f5e50ff3e086997d' # ratchet:google-github-actions/auth@v1
         with:
           workload_identity_provider: '${{ env.WIF_PROVIDER }}'
           service_account: '${{ env.WIF_SERVICE_ACCOUNT }}'
           token_format: 'access_token'
+
       - name: 'Setup Terraform'
         uses: abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed # ratchet:abcxyz/secure-setup-terraform@v0.2.5
         with:
-          terraform_version: '${{ env.WARDEN_TF_VERSION }}'
-          terraform_module_location: './${{ env.WARDEN_PATH }}'
+          terraform_version: '${{ env.GUARDIAN_TF_VERSION }}'
+          terraform_module_location: './${{ env.GUARDIAN_PATH }}'
           protect_lockfile: false
           terraform_wrapper: false
+
       - name: 'Init'
-        working-directory: '${{ env.WARDEN_PATH }}'
+        working-directory: '${{ env.GUARDIAN_PATH }}'
         run: terraform init -input=false
+
       - name: 'Run Command'
-        working-directory: '${{ env.WARDEN_PATH }}'
-        run: |-
-          terraform ${{ inputs.command }} ${{ inputs.args }}
-  admin_success:
-    needs: ['admin_access', 'admin_init', 'admin']
-    runs-on: 'ubuntu-latest'
-    steps:
-      - name: 'Invalid'
-        if: ${{ github.ref != 'refs/heads/main' }}
-        run: |-
-          echo "Warden Admin can only be run from the main branch."
-          exit 1
-      - name: 'Success'
-        run: exit 0
+        working-directory: '${{ env.GUARDIAN_PATH }}'
+        run: terraform ${{ inputs.command }} ${{ inputs.args }}
