--- a/.github/workflows/test-admin.yml
+++ b/.github/workflows/test-admin.yml
@@ -1,5 +1,5 @@
-name: 'Warden Admin - Test'
-run-name: 'Warden Admin ${{ inputs.workspace }} ${{ inputs.number }}'
+name: 'Guardian Admin - Test'
+run-name: 'Guardian Admin ${{ inputs.workspace }} ${{ inputs.number }}'
 
 on:
   workflow_dispatch:
@@ -8,7 +8,7 @@ on:
         description: 'COMMAND - The Terraform command to run including any arguments (this value is appended to the terraform command).'
         required: true
       workspace:
-        description: 'WORKSPACE - The Terraform workspace directory to execute the command in. If left blank, the command will run for all paths in .warden'
+        description: 'WORKSPACE - The Terraform workspace directory to execute the command in. If left blank, the command will run for all paths in .guardian'
       number:
         description: 'PR NUMBER - The Pull Request number to run the actions for (if blank, this runs for main).'
 
@@ -22,12 +22,12 @@ permissions:
 
 jobs:
   admin:
-    uses: 'abcxyz/warden/.github/workflows/warden-admin.yml@main' # ratchet:exclude
+    uses: 'abcxyz/warden/.github/workflows/admin.yml@main' # ratchet:exclude
     with:
       command: '${{ inputs.command }}'
       workspace: '${{ inputs.workspace }}'
       number: '${{ inputs.number }}'
       wif_provider: 'projects/200062081032/locations/global/workloadIdentityPools/github-pool/providers/github-provider-abcxyz-warden'
       wif_service_account: 'warden-ci-sa@verbanicm-dev.iam.gserviceaccount.com'
-      warden_bucket_name: 'verbanicm-dev-terraform'
-      warden_tf_version: '1.1.8'
+      guardian_bucket_name: 'verbanicm-dev-terraform'
+      guardian_tf_version: '1.1.8'
