--- a/.github/workflows/test-apply.yml
+++ b/.github/workflows/test-apply.yml
@@ -1,10 +1,14 @@
-name: 'Warden Unlock - Test'
-run-name: 'Warden Unlock - PR #${{ github.event.issue.number }}'
+name: 'Guardian Apply - Test'
+run-name: 'Guardian Apply - PR #${{ github.event.pull_request.number }}'
 
 on:
-  issue_comment:
+  pull_request:
     types:
-      - 'created'
+      - 'closed'
+    branches:
+      - 'main'
+    paths:
+      - 'test/**'
 
 concurrency:
   group: '${{ github.workflow }}-${{ github.head_ref || github.ref }}'
@@ -13,13 +17,12 @@ permissions:
   contents: 'read'
   id-token: 'write'
   pull-requests: 'write'
-  checks: 'write'
 
 jobs:
-  unlock:
-    uses: 'abcxyz/warden/.github/workflows/warden-unlock.yml@main' # ratchet:exclude
+  apply:
+    uses: 'abcxyz/warden/.github/workflows/apply.yml@main' # ratchet:exclude
     with:
       wif_provider: 'projects/200062081032/locations/global/workloadIdentityPools/github-pool/providers/github-provider-abcxyz-warden'
       wif_service_account: 'warden-ci-sa@verbanicm-dev.iam.gserviceaccount.com'
-      warden_bucket_name: 'verbanicm-dev-terraform'
-      warden_tf_version: '1.1.8'
+      guardian_bucket_name: 'verbanicm-dev-terraform'
+      guardian_tf_version: '1.1.8'
