--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -1,5 +1,5 @@
-name: 'Warden Plan - Test'
-run-name: 'Warden Plan - PR #${{ github.event.pull_request.number }}'
+name: 'Guardian Plan - Test'
+run-name: 'Guardian Plan - PR #${{ github.event.pull_request.number }}'
 
 on:
   pull_request:
@@ -22,9 +22,9 @@ permissions:
 
 jobs:
   plan:
-    uses: 'abcxyz/warden/.github/workflows/warden-plan.yml@main' # ratchet:exclude
+    uses: 'abcxyz/warden/.github/workflows/plan.yml@main' # ratchet:exclude
     with:
       wif_provider: 'projects/200062081032/locations/global/workloadIdentityPools/github-pool/providers/github-provider-abcxyz-warden'
       wif_service_account: 'warden-ci-sa@verbanicm-dev.iam.gserviceaccount.com'
-      warden_bucket_name: 'verbanicm-dev-terraform'
-      warden_tf_version: '1.1.8'
+      guardian_bucket_name: 'verbanicm-dev-terraform'
+      guardian_tf_version: '1.1.8'
