--- a/.github/workflows/test-unlock.yml
+++ b/.github/workflows/test-unlock.yml
@@ -1,14 +1,10 @@
-name: 'Warden Apply - Test'
-run-name: 'Warden Apply - PR #${{ github.event.pull_request.number }}'
+name: 'Guardian Unlock - Test'
+run-name: 'Guardian Unlock - PR #${{ github.event.issue.number }}'
 
 on:
-  pull_request:
+  issue_comment:
     types:
-      - 'closed'
-    branches:
-      - 'main'
-    paths:
-      - 'test/**'
+      - 'created'
 
 concurrency:
   group: '${{ github.workflow }}-${{ github.head_ref || github.ref }}'
@@ -17,12 +13,13 @@ permissions:
   contents: 'read'
   id-token: 'write'
   pull-requests: 'write'
+  checks: 'write'
 
 jobs:
-  apply:
-    uses: 'abcxyz/warden/.github/workflows/warden-apply.yml@main' # ratchet:exclude
+  unlock:
+    uses: 'abcxyz/warden/.github/workflows/unlock.yml@main' # ratchet:exclude
     with:
       wif_provider: 'projects/200062081032/locations/global/workloadIdentityPools/github-pool/providers/github-provider-abcxyz-warden'
       wif_service_account: 'warden-ci-sa@verbanicm-dev.iam.gserviceaccount.com'
-      warden_bucket_name: 'verbanicm-dev-terraform'
-      warden_tf_version: '1.1.8'
+      guardian_bucket_name: 'verbanicm-dev-terraform'
+      guardian_tf_version: '1.1.8'
